<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hellounicorn"
        android:gravity="center"
        android:shadowColor="@color/green"
        android:shadowRadius="12"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/buttonMultiplication"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/background_button"
        android:text="@string/button_multiplication"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubtraction"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/buttonAddition"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button"
        android:text="@string/button_addition"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNickname"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_button"
        android:text="@string/button_division"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplication"
        app:layout_constraintVertical_bias="0.008" />

    <Button
        android:id="@+id/buttonSubtraction"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_button"
        android:text="@string/button_subtraction"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddition"
        app:layout_constraintVertical_bias="0.004" />

    <EditText
        android:id="@+id/editTextNickname"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_nickname"
        android:ems="10"
        android:hint="@string/nickname"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        app:layout_constraintVertical_bias="0.0">

    </EditText>

</androidx.constraintlayout.widget.ConstraintLayout>