<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".FinalActivity">

    <ImageView
        android:id="@+id/imageWon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_desc_won"
        android:src="@drawable/party"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

    </ImageView>

    <ImageView
        android:id="@+id/imageLost"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/sad"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        android:contentDescription="@string/image_desc_lost">
    </ImageView>

    <TextView
        android:id="@+id/finalText"
        android:layout_width="300dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:shadowColor="@color/black"
        android:shadowRadius="16"
        android:textStyle="bold"
        android:text="@string/template"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/imageWon"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>