<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".CalculationActivity">

    <TextView
        android:id="@+id/textQuestions"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="0 / 10"
        android:gravity="center"
        android:textSize="24sp"
        android:background="@drawable/background_questions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayoutCalculations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <TextView
            android:id="@+id/textCalculation"
            android:layout_width="164dp"
            android:layout_height="48dp"

            android:background="@drawable/background_calculation"
            android:gravity="left|center"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:text="@string/calculation"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded">

        </TextView>

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:textColor="@color/black"
            android:background="@drawable/background_input"
            android:ems="10"
            android:hint="@string/answer"
            android:importantForAutofill="no"
            android:inputType="numberDecimal|numberSigned"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:textSize="24sp" >

        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:background="@drawable/background_button"
        android:text="@string/button_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCalculations"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:padding="6dp"
        android:orientation="horizontal"
        android:background="@drawable/background_questions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/heartOne"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart">
        </ImageView>

        <ImageView
            android:id="@+id/heartTwo"
            android:layout_marginStart="6dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart">
        </ImageView>

        <ImageView
            android:id="@+id/heartThree"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="6dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/heart">
        </ImageView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>